--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <script>
         // NOTE: The API key is included here as requested for local execution.
-        const apiKey = "AIzaSyA9KeVx1I5UNsgQrqLVWVXM6MnqwuFBCMo";
+        const apiKey = ""; // add yours key
         // Main Chat Model URL (Multimodal: Text + Image + Search)
         const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
         // TTS Model URL
@@ -632,4 +632,5 @@
     </script>
 </body>
 </html>
+
  
